Added Highcharts library and directive.

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -114,6 +114,7 @@
     <script type="text/javascript" src="lib/ng-grid-row-selection-events.js"></script> 
     <script type="text/javascript" src="lib/ng-grid-cell-edit-events.js"></script>
     <script type="text/javascript" src="lib/angular-chosen-master/example/vendor/chosen.jquery.js"></script>
+    <script type="text/javascript" src="lib/highcharts.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/moment/moment.js"></script>
     
     <!-- endbuild -->
@@ -194,6 +195,7 @@
     <script src="scripts/directives/chosen.js"></script>
     <script src="scripts/directives/fitHeightLayout.js"></script>
     <script src="scripts/directives/dynamicMultiVehicleBooking.js"></script>
+    <script src="scripts/directives/highChart.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <!-- endbuild -->
 
