--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -21,12 +21,12 @@
     <link rel="stylesheet" type="text/css" href="lib/angular-chosen-master/example/vendor/chosen.css" />
     <link rel="stylesheet" type="text/css" href="lib/angular-chosen-master/chosen-spinner.css" />
     <link rel="stylesheet" href="bower_components/bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
-
+    <link rel="stylesheet" href="lib/datepicker/datePicker.css">
     <!-- endbuild -->
 </head>
   <body ng-app="sigmaCabsApp">
     <!--Hiding it for operators view-->
-    <nav class="navbar navbar-default" role="navigation" ng-show = "canShowNav">
+    <nav class="navbar navbar-default" role="navigation" ng-show = "canShowNav" style="display: none;">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Sigma Cabs</a>
@@ -114,7 +114,9 @@
     <script type="text/javascript" src="lib/ng-grid-row-selection-events.js"></script> 
     <script type="text/javascript" src="lib/ng-grid-cell-edit-events.js"></script>
     <script type="text/javascript" src="lib/angular-chosen-master/example/vendor/chosen.jquery.js"></script>
-    <script type="text/javascript" src="lib/highcharts.js"></script>
+    <script type="text/javascript" src="lib/datepicker/date.js"></script>
+    <script type="text/javascript" src="lib/datepicker/jquery.datePicker.js"></script>
+	<script type="text/javascript" src="lib/highcharts.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/moment/moment.js"></script>
     
     <!-- endbuild -->
@@ -195,7 +197,8 @@
     <script src="scripts/directives/chosen.js"></script>
     <script src="scripts/directives/fitHeightLayout.js"></script>
     <script src="scripts/directives/dynamicMultiVehicleBooking.js"></script>
-    <script src="scripts/directives/highChart.js"></script>
+    <script src="scripts/directives/datepicker.js"></script>
+	<script src="scripts/directives/highChart.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <!-- endbuild -->
 
