--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -178,6 +178,7 @@
     <script src="scripts/services/authenticationService.js"></script>
     <script src="scripts/services/urlService.js"></script>
     <script src="scripts/services/PrerequisiteServices.js"></script>
+    <script src="scripts/services/PreConfigService.js"></script>
     <script src="scripts/services/modalWindow.js"></script>
     <script src="scripts/services/wizardHandler.js"></script>
     <script src="scripts/services/appUtils.js"></script>
