Dispatch Changes: Added Vehicle login and Vacant API integrations

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -163,12 +163,19 @@
  -->    
     
     <script src="scripts/controllers/dispatch/dispatchMainController.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleActivityController.js"></script>
+    <script src="scripts/controllers/dispatch/changeVehiclePhone.js"></script>
+    <script src="scripts/controllers/dispatch/changeVehicleStatus.js"></script>
     <script src="scripts/controllers/dispatch/dispatchersList.js"></script>
     <script src="scripts/controllers/dispatch/dispatchersVehiclesList.js"></script>
     <script src="scripts/controllers/dispatch/vehicleLoginController.js"></script>
     <script src="scripts/controllers/dispatch/vehicleLogoutController.js"></script>
     <script src="scripts/controllers/dispatch/breakStartController.js"></script>
     <script src="scripts/controllers/dispatch/breakEndController.js"></script> 
+    <script src="scripts/controllers/dispatch/changeVehicleLocation.js"></script> 
+    <script src="scripts/controllers/dispatch/vehicleBreakStart.js"></script> 
+    <script src="scripts/controllers/dispatch/vehicleBreakStop.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleLogout.js"></script>
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
 
     <script src="scripts/controllers/chat/chatController.js"></script>    
