Added disposition form.. chaned logic to show vehicleTypes and vehicleNames in DD.
Open existing booking

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -150,6 +150,7 @@
     <script src="scripts/controllers/booking/chkMultiVehicleController.js"></script>   
 
     <script src="scripts/controllers/booking/cancelBooking.js"></script>   
+    <script src="scripts/controllers/booking/dispositionBooking.js"></script>   
     <script src="scripts/controllers/booking/blockCustomer.js"></script>   
     <script src="scripts/controllers/booking/bookingTariffGrid.js"></script>
 	<script src="scripts/controllers/booking/customerRequest.js"></script>   
