Dispatch Changes: Included Vehicle Allot API integration.

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -177,6 +177,9 @@
     <script src="scripts/controllers/dispatch/vehicleBreakStart.js"></script> 
     <script src="scripts/controllers/dispatch/vehicleBreakStop.js"></script>
     <script src="scripts/controllers/dispatch/vehicleLogout.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBookingStart.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBookingClose.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBookingComplaint.js"></script>
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
 
     <script src="scripts/controllers/chat/chatController.js"></script>    
