Added generic display fields of customer like tripCount...

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="lib/angular-chosen-master/example/vendor/chosen.css" />
     <link rel="stylesheet" type="text/css" href="lib/angular-chosen-master/chosen-spinner.css" />
     <link rel="stylesheet" href="bower_components/bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
-    <link rel="stylesheet" href="lib/datepicker/datePicker.css">
+    <!-- <link rel="stylesheet" href="lib/datepicker/datePicker.css"> -->
     <!-- endbuild -->
 </head>
   <body ng-app="sigmaCabsApp">
