--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -115,6 +115,7 @@
     <script type="text/javascript" src="lib/ng-grid-cell-edit-events.js"></script>
     <script type="text/javascript" src="lib/angular-chosen-master/example/vendor/chosen.jquery.js"></script>
     <script type="text/javascript" src="lib/datepicker/date.js"></script>
+    <script type="text/javascript" src="lib/shortcut.js"></script>
     <script type="text/javascript" src="lib/datepicker/jquery.datePicker.js"></script>
 	<script type="text/javascript" src="lib/highcharts.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/moment/moment.js"></script>
