Dispatch: Added Feedback popup changes

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -183,6 +183,7 @@
     <script src="scripts/controllers/dispatch/vehicleBookingClose.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingComplaint.js"></script>
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
+    <script src="scripts/controllers/dispatch/dispatchAddRequest.js"></script> 
 
     <script src="scripts/controllers/chat/chatController.js"></script>    
 
