Changed logic for statistics and added vehicleAvailablility.

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -56,7 +56,7 @@
 
     <div class="container">
         <div ng-view=""></div>
-        <div class="footer">
+        <div class="footer hide">
             <p>&copy; 2014. sigmaCabs.</p>
         </div>
     </div>
