Removed the gruntBuild (dist build) bug. Kept phone validation and bookingForm validation.

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -117,7 +117,8 @@
     <script type="text/javascript" src="lib/datepicker/date.js"></script>
     <script type="text/javascript" src="lib/shortcut.js"></script>
     <script type="text/javascript" src="lib/datepicker/jquery.datePicker.js"></script>
-	<script type="text/javascript" src="lib/highcharts.js"></script>
+    <script type="text/javascript" src="lib/highcharts.js"></script>
+	<script type="text/javascript" src="lib/jquery.numeric.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/moment/moment.js"></script>
     
     <!-- endbuild -->
@@ -157,13 +158,6 @@
 	<script src="scripts/controllers/booking/customerRequest.js"></script>   
     <script src="scripts/controllers/booking/statistics/bookingStatistics.js"></script> 
     <script src="scripts/controllers/booking/singleTariff.js"></script>   
-
-<!-- 
-    <script src="scripts/controllers/booking/customerBookingTabs.js"></script>
-    <script src="scripts/controllers/booking/pastBookingList.js"></script>
-    <script src="scripts/controllers/booking/upcomingBookingList.js"></script>
-    <script src="scripts/controllers/booking/canceledBookingList.js"></script>    
- -->    
     
     <script src="scripts/controllers/dispatch/dispatchMainController.js"></script>
     <script src="scripts/controllers/dispatch/vehicleActivityController.js"></script>
@@ -215,6 +209,7 @@
     <script src="scripts/directives/dynamicMultiVehicleBooking.js"></script>
     <script src="scripts/directives/datepicker.js"></script>
     <script src="scripts/directives/highChart.js"></script>
+    <script src="scripts/directives/phone.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <!-- endbuild -->
 
