Dispatch dashboard html

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -175,6 +175,11 @@
     <script src="scripts/controllers/dispatch/vehicleLogout.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingStart.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingClose.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBreakDown.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBookingTariff.js"></script>
+    <script src="scripts/controllers/dispatch/changeVehicle.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBookingCancel.js"></script>
+    <script src="scripts/controllers/dispatch/changeVehPickupLocation.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingComplaint.js"></script>
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
     <script src="scripts/controllers/dispatch/dispatchAddRequest.js"></script> 
