Did bug fixes in call-taker view. Added customer controller. added mainTariffDetails page.

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -137,6 +137,11 @@
     <script src="scripts/controllers/users/usersMainController.js"></script>
     <script src="scripts/controllers/users/usersListController.js"></script>
 
+
+    <script src="scripts/controllers/customers/customersAddUpdateController.js"></script>
+    <script src="scripts/controllers/customers/customersMainController.js"></script>
+    <script src="scripts/controllers/customers/customersListController.js"></script>
+
     <script src="scripts/controllers/vehicles/vehicleAddUpdateController.js"></script>
     <script src="scripts/controllers/vehicles/vehicleMainController.js"></script>
     <script src="scripts/controllers/vehicles/vehicleListController.js"></script>
