Base Layout size fixed to 1280, Dispatch: added booking rejected screen.

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -185,6 +185,7 @@
     <script src="scripts/controllers/dispatch/changeVehicle.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingCancel.js"></script>
     <script src="scripts/controllers/dispatch/changeVehPickupLocation.js"></script>
+    <script src="scripts/controllers/dispatch/vehicleBookingRejected.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingComplaint.js"></script>
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
     <script src="scripts/controllers/dispatch/dispatchAddRequest.js"></script> 
