--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -195,6 +195,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/dashboard_services.js -->
+    <script src="scripts/services/serverService.js"></script>
     <script src="scripts/services/authenticationService.js"></script>
     <script src="scripts/services/urlService.js"></script>
     <script src="scripts/services/PrerequisiteServices.js"></script>
