Added mainBookingHistory details page in callTaker

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -163,6 +163,7 @@
 	<script src="scripts/controllers/booking/customerRequest.js"></script>   
     <script src="scripts/controllers/booking/statistics/bookingStatistics.js"></script> 
     <script src="scripts/controllers/booking/singleTariff.js"></script>   
+    <script src="scripts/controllers/booking/MainBookingHistory.js"></script>   
     
     <script src="scripts/controllers/dispatch/dispatchMainController.js"></script>
     <script src="scripts/controllers/dispatch/vehicleActivityController.js"></script>
