--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -61,45 +61,16 @@
         </div>
     </div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-XXXXX-X');
-    ga('send', 'pageview');
-    </script>
+    
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
     <!-- build:js scripts/dashboard_plugins.js -->
-    <script src="bower_components/sass-bootstrap/js/affix.js"></script>
-    <script src="bower_components/sass-bootstrap/js/alert.js"></script>
-    <script src="bower_components/sass-bootstrap/js/button.js"></script>
-    <script src="bower_components/sass-bootstrap/js/carousel.js"></script>
-    <script src="bower_components/sass-bootstrap/js/transition.js"></script>
-    <script src="bower_components/sass-bootstrap/js/collapse.js"></script>
-    <script src="bower_components/sass-bootstrap/js/dropdown.js"></script>
-    <script src="bower_components/sass-bootstrap/js/modal.js"></script>
-    <script src="bower_components/sass-bootstrap/js/scrollspy.js"></script>
-    <script src="bower_components/sass-bootstrap/js/tab.js"></script>
-    <script src="bower_components/sass-bootstrap/js/tooltip.js"></script>
-    <script src="bower_components/sass-bootstrap/js/popover.js"></script>
     <script src="bower_components/ng-grid/ng-grid-2.0.7.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <!-- <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script> -->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <!--  <script src="bower_components/ui_bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script> -->
     <!-- endbuild -->
 
     <!-- build:js scripts/dashboard_modules.js -->
@@ -190,7 +161,7 @@
     <script src="scripts/controllers/dispatch/vehicleBookingRejected.js"></script>
     <script src="scripts/controllers/dispatch/vehicleBookingComplaint.js"></script>
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
-
+    <script src="scripts/controllers/dispatch/controlViewController.js"></script>
     <script src="scripts/controllers/chat/chatController.js"></script>    
 
     <!-- endbuild -->
@@ -209,6 +180,7 @@
     <script src="scripts/services/VehiclesService.js"></script>
     <script src="scripts/services/CustomerService.js"></script>
     <script src="scripts/services/DispatchService.js"></script>
+    <script src="scripts/services/stubService.js"></script>
     <!-- endbuild -->
 
 
@@ -223,6 +195,7 @@
     <script src="scripts/directives/datepicker.js"></script>
     <script src="scripts/directives/highChart.js"></script>
     <script src="scripts/directives/phone.js"></script>
+    <script src="scripts/directives/accordianHandler_hack.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <!-- endbuild -->
 
