added reports controller

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -108,6 +108,8 @@
     <script src="scripts/controllers/users/usersMainController.js"></script>
     <script src="scripts/controllers/users/usersListController.js"></script>
 
+    <script src="scripts/controllers/reports/reportsMainController.js"></script>
+
 
     <script src="scripts/controllers/customers/customersAddUpdateController.js"></script>
     <script src="scripts/controllers/customers/customersMainController.js"></script>
