--- a/sigmaCabs/app/index.html
+++ b/sigmaCabs/app/index.html
@@ -74,6 +74,8 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/services.js -->
+            <script src="scripts/services/serverService.js"></script>
+            <script src="scripts/services/stubService.js"></script>
             <script src="scripts/services/authenticationService.js"></script>
             <script src="scripts/services/urlService.js"></script>
             <script src="scripts/services/modalWindow.js"></script>
