--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -68,7 +68,8 @@
     <script src="bower_components/angular/angular.js"></script>
 
     <!-- build:js scripts/dashboard_plugins.js -->
-    <script src="bower_components/ng-grid/ng-grid-2.0.7.min.js"></script>
+    <!-- <script src="bower_components/ng-grid/ng-grid-2.0.7.min.js"></script> -->
+    <script src="bower_components/ng-grid/ng-grid-2.0.7.debug.js"></script>
     <!-- <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script> -->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbuild -->
