Number only directive added

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -199,6 +199,7 @@
     <script src="scripts/directives/highChart.js"></script>
     <script src="scripts/directives/phone.js"></script>
     <script src="scripts/directives/enterKey.js"></script>
+    <script src="scripts/directives/number.js"></script>
     <script src="scripts/directives/accordianHandler_hack.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <!-- endbuild -->
