--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -64,8 +64,10 @@
     
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 
+    <!-- build:js scripts/dashboard_libraries.js -->
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <!-- endbuild -->
 
     <!-- build:js scripts/dashboard_plugins.js -->
     <!-- <script src="bower_components/ng-grid/ng-grid-2.0.7.min.js"></script> -->
