--- a/sigmaCabs/app/index.html
+++ b/sigmaCabs/app/index.html
@@ -32,6 +32,7 @@
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<!--
      <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -41,9 +42,12 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+-->
 
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+        <!-- build:js scripts/dashboard_libraries.js -->
+            <script src="bower_components/jquery/jquery.js"></script>
+            <script src="bower_components/angular/angular.js"></script>
+        <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
             <script src="bower_components/sass-bootstrap/js/affix.js"></script>
