--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -61,8 +61,9 @@
         </div>
     </div>
 
-    
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    <!--
+	   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    -->
 
     <!-- build:js scripts/dashboard_libraries.js -->
     <script src="bower_components/jquery/jquery.js"></script>
@@ -168,6 +169,7 @@
     <script src="scripts/controllers/dispatch/dispatchFeedback.js"></script> 
     <script src="scripts/controllers/dispatch/controlViewController.js"></script>
     <script src="scripts/controllers/chat/chatController.js"></script>    
+    <script src="scripts/controllers/booking/breaksController.js"></script>    
 
     <!-- endbuild -->
 
