--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -205,6 +205,7 @@
     <script src="scripts/directives/enterKey.js"></script>
     <script src="scripts/directives/number.js"></script>
     <script src="scripts/directives/alphabets.js"></script>
+    <script src="scripts/directives/angucomplete.js"></script>
     <script src="scripts/directives/accordianHandler_hack.js"></script>
     <script type="text/javascript" src="bower_components/bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
     <!-- endbuild -->
