- 	change minutes to hours in tariffs :: DONE
-  in booking mgmt... will send hours value as mandatory :: DONE.

- control view - alloted- booking rejected : comments is mandatory. :: DONE

- interchange chat and statistics windows. :: DONE

- Add a Spl. Request popup form. :: DONE

Signed-off-by: Mario Ray <sigma5@sigma5-desktop.(none)>

--- a/sigmaCabs/app/dashboard.html
+++ b/sigmaCabs/app/dashboard.html
@@ -125,6 +125,7 @@
 
     <script src="scripts/controllers/booking/bookingController.js"></script>
     <script src="scripts/controllers/booking/bookingFormController.js"></script>
+    <script src="scripts/controllers/booking/specialRequestBookingForm.js"></script>
     <script src="scripts/controllers/dashboard/header.js"></script>
     <script src="scripts/controllers/booking/bookingHistory.js"></script>   
     <script src="scripts/controllers/booking/existingCustomerAddBooking.js"></script>
